# planters_cycle

./: .dockerignore  .env  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.devcontainer/: .p10k.zsh  devcontainer.json
.github/workflows/: codeql.yml  release_rust.yml  rust-clippy.yml  rust.yml  ui.yml
api/: .env  .gitignore  Cargo.toml  Dockerfile
api/.cargo/: config.toml
api/prisma/: schema.prisma
api/prisma-cli/: Cargo.toml
api/prisma-cli/src/: main.rs
api/prisma/migrations/20240510151456_init/: migration.sql
api/prisma/migrations/20240510211847_update_skeleton/: migration.sql
api/prisma/migrations/20240601154955_role_isdefault/: migration.sql
api/prisma/migrations/20240605101408_add/: migration.sql
api/prisma/migrations/20240607104334_add_plant_relations_and_stages/: migration.sql
api/prisma/migrations/20240608182523_rename_plantstage_seedling/: migration.sql
api/src/: lib.rs  main.rs  server.rs
api/src/controller/: genetic.rs  mod.rs  plant.rs
api/src/middleware/: auth.rs  mod.rs
api/src/model/: dto.rs  error.rs  mod.rs
api/src/route/: auth.rs  genetics.rs  health_check.rs  mod.rs  plants.rs  roles.rs  users.rs
api/src/service/: authentication.rs  genetic.rs  mod.rs  plant.rs  user.rs
api/src/tests/: mod.rs
api/src/tests/controller/: auth_controller.rs  health_controller.rs  index_controller.rs  mod.rs
app/: bun.lockb  package-lock.json  package.json  tailwind.config.ts
app/app/: layout.tsx  providers.tsx
app/app/dashboard/: layout.tsx
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/api/src/controller/: genetic.rs  mod.rs  plant.rs
crates/api/tests/: genetic_controller_test.rs
crates/api/tests/common/: mod.rs
crates/core/: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/src/: genetic.rs  lib.rs  plant.rs  post.rs  prelude.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs  m20240429_192738_create_plant.rs
crates/service/: Cargo.toml
crates/service/src/: error.rs  genetic.rs  lib.rs  query.rs
crates/service/tests/: prepare.rs
entity/: Cargo.toml
entity/src/: genetic.rs  plant.rs  post.rs  prelude.rs
frontend/: bun.lockb
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20240429_192738_create_plant.rs  m20240429_194524_create_genetic.rs  main.rs
prisma/: schema.prisma
prisma/migrations/20240510151456_init/: migration.sql
scripts/: create_database.sh  populate-database.sh  prepend-api-path-to-sarif.sh
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
ui/: .env  .eslintignore  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  auth.ts  bun.lockb  middleware.ts  next.config.mjs  package.json  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/admin/: layout.tsx
ui/app/admin/(overview)/: page.tsx
ui/app/admin/roles/: page.tsx
ui/app/admin/roles/[id]/edit/: page.tsx
ui/app/admin/roles/create/: page.tsx
ui/app/admin/users/: page.tsx
ui/app/admin/users/[id]/edit/: page.tsx
ui/app/admin/users/create/: page.tsx
ui/app/api/auth/[...nextauth]/: route.ts
ui/app/dashboard/: layout.tsx
ui/app/dashboard/(overview)/: page.tsx
ui/app/dashboard/genetics/: page.tsx
ui/app/dashboard/genetics/create/: page.tsx
ui/app/dashboard/plants/: page.tsx
ui/app/dashboard/plants/create/: page.tsx
ui/app/lib/: data.ts
ui/app/login/: page.tsx
ui/app/profile/: page.tsx
ui/app/server/: page.tsx
ui/app/ui/: admin-button.tsx  data-table.tsx  list-data.tsx  login-form.tsx  search-bar.tsx  theme-toggler.tsx  top-nav.tsx  user-dropdown.tsx
ui/app/ui/admin/: side-nav.tsx
ui/app/ui/admin/roles/: action-dropdown.tsx  columns.tsx  create-form.tsx  edit-form.tsx  table-row.tsx
ui/app/ui/admin/user/: action-dropdown.tsx  colums.tsx  create-form.tsx  delete-dropdown.tsx  edit-form.tsx  table-row.tsx
ui/app/ui/genetics/: action-dropdown.tsx  columns.tsx  edit-form.tsx
ui/app/ui/nav/: admin-button.tsx  nav-links.tsx  top-nav.tsx  user-dropdown.tsx
ui/app/ui/plants/: action-dropdown.tsx  columns.tsx  create-form.tsx
ui/components/: bread-crumb.tsx  plantstage-icon.tsx  submit-button.tsx  theme-provider.tsx
ui/components/ui/: alert-dialog.tsx  badge.tsx  breadcrumb.tsx  button.tsx  checkbox.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  pagination.tsx  select.tsx  sheet.tsx  toast.tsx  use-toast.ts
ui/lib/: actions.ts  data.ts  http.ts  utils.ts
ui/lib/repos/: genetic.ts  plant.ts  role.ts  user.ts
ui/prisma/: schema.prisma
ui/prisma/zod/: genetic.ts  index.ts  plant.ts  planthistory.ts  role.ts  user.ts  usersinroles.ts
