[workspace]
members = [".", "prisma-cli"]

[package]
name = "planters_cycle"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-session = "0.9.0"
actix-web = {version = "4.5.1", features = ["redis-actor-session"]}
chrono = "0.4.38"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"]}
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio ={ version = "1.37.0", features = ["full"]}
