[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
service = { path = "../service" }
actix-web = "4.5.1"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.199", features = ["derive"] }
entity = { path = "../entity" }
axum = "0.7.1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"
anyhow = "1.0"
serde_json = "1.0"
tera = "1.19"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[dependencies.sea-orm-migration]
version = "0.12.5"
features = ["sqlx-postgres", "runtime-tokio-rustls"]