[workspace]
members = [".", "prisma-cli"]

[package]
name = "planters_cycle"
description = "The easy way to manage all your plants"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Johannes Grimm <grimmjohannes1998@gmail.com>"]

[dependencies]
actix-http = "3.7.0"
actix-identity = "0.7.1"
actix-rt = "2.9.0"
actix-session = { version = "0.9.0", features = ["redis-actor-session"] }
actix-web = { version = "4.6.0" }
argon2 = "0.5.3"
chrono = "0.4.38"
env_logger = "0.11.3"
log = "0.4.21"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = ["postgresql"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
