[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.0.0-rc.3"
features = [
    "runtime-tokio-native-tls", # `ASYNC_RUNTIME` feature
    "sqlx-postgres", # `DATABASE_DRIVER` feature
]
