[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }

[dependencies.sea-orm]
version = "0.12.15"
features = ["debug-print", "runtime-tokio-native-tls", "sqlx-postgres", "mock"]

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
mock = ["sea-orm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
