[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "../migration" }
service = { path = "../service" }
entity = { path = "../entity" }
listenfd = "1"
actix-web.workspace = true
dotenvy = "0.15.7"
tokio.workspace = true
serde = { version = "1.0.199", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

sea-orm-migration.workspace = true

[dev-dependencies]
tokio.workspace = true
actix-http = "3.6.0"
[dev-dependencies.sea-orm]
version = "1.0.0-rc.3"
features = ["mock"]