[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
entity = { path = "../entity" }
sea-orm.workspace = true
serde = { version = "1.0.199", features = ["derive"] }
derive_more = "0.99.17"
actix-web.workspace = true

[dev-dependencies]
tokio.workspace = true

[dev-dependencies.sea-orm]
version = "1.0.0-rc.3"
features = ["mock"]